// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<ReplyList
  comment={
    Object {
      "id": "comment-id",
      "lastViewerAction": null,
      "replies": Object {
        "edges": Array [
          Object {
            "node": Object {
              "id": "comment-1",
            },
          },
          Object {
            "node": Object {
              "id": "comment-2",
            },
          },
        ],
      },
      "status": "NONE",
    }
  }
  comments={
    Array [
      Object {
        "id": "comment-1",
        "replyListElement": <ReplyListComponent
          comment={
            Object {
              "id": "comment-1",
            }
          }
          settings={
            Object {
              "reaction": Object {
                "icon": "thumb_up_alt",
                "label": "Respect",
              },
            }
          }
          story={
            Object {
              "id": "story-id",
            }
          }
          viewer={null}
        />,
        "showConversationLink": false,
      },
      Object {
        "id": "comment-2",
        "replyListElement": <ReplyListComponent
          comment={
            Object {
              "id": "comment-2",
            }
          }
          settings={
            Object {
              "reaction": Object {
                "icon": "thumb_up_alt",
                "label": "Respect",
              },
            }
          }
          story={
            Object {
              "id": "story-id",
            }
          }
          viewer={null}
        />,
        "showConversationLink": false,
      },
    ]
  }
  disableShowAll={false}
  indentLevel={1}
  localReply={false}
  onShowAll={[Function]}
  settings={
    Object {
      "reaction": Object {
        "icon": "thumb_up_alt",
        "label": "Respect",
      },
    }
  }
  story={
    Object {
      "id": "story-id",
    }
  }
  viewer={null}
/>
`;

exports[`renders correctly when replies are empty 1`] = `""`;

exports[`when has more replies renders hasMore 1`] = `
<ReplyList
  comment={
    Object {
      "id": "comment-id",
      "lastViewerAction": null,
      "replies": Object {
        "edges": Array [
          Object {
            "node": Object {
              "id": "comment-1",
            },
          },
          Object {
            "node": Object {
              "id": "comment-2",
            },
          },
        ],
      },
      "status": "NONE",
    }
  }
  comments={
    Array [
      Object {
        "id": "comment-1",
        "replyListElement": undefined,
        "showConversationLink": false,
      },
      Object {
        "id": "comment-2",
        "replyListElement": undefined,
        "showConversationLink": false,
      },
    ]
  }
  disableShowAll={false}
  hasMore={true}
  indentLevel={1}
  localReply={false}
  onShowAll={[Function]}
  settings={
    Object {
      "reaction": Object {
        "icon": "thumb_up_alt",
        "label": "Respect",
      },
    }
  }
  story={
    Object {
      "id": "story-id",
    }
  }
  viewer={null}
/>
`;

exports[`when has more replies when showing all disables show all button 1`] = `
<ReplyList
  comment={
    Object {
      "id": "comment-id",
      "lastViewerAction": null,
      "replies": Object {
        "edges": Array [
          Object {
            "node": Object {
              "id": "comment-1",
            },
          },
          Object {
            "node": Object {
              "id": "comment-2",
            },
          },
        ],
      },
      "status": "NONE",
    }
  }
  comments={
    Array [
      Object {
        "id": "comment-1",
        "replyListElement": undefined,
        "showConversationLink": false,
      },
      Object {
        "id": "comment-2",
        "replyListElement": undefined,
        "showConversationLink": false,
      },
    ]
  }
  disableShowAll={true}
  hasMore={true}
  indentLevel={1}
  localReply={false}
  onShowAll={[Function]}
  settings={
    Object {
      "reaction": Object {
        "icon": "thumb_up_alt",
        "label": "Respect",
      },
    }
  }
  story={
    Object {
      "id": "story-id",
    }
  }
  viewer={null}
/>
`;

exports[`when has more replies when showing all enable show all button after loading is done 1`] = `
<ReplyList
  comment={
    Object {
      "id": "comment-id",
      "lastViewerAction": null,
      "replies": Object {
        "edges": Array [
          Object {
            "node": Object {
              "id": "comment-1",
            },
          },
          Object {
            "node": Object {
              "id": "comment-2",
            },
          },
        ],
      },
      "status": "NONE",
    }
  }
  comments={
    Array [
      Object {
        "id": "comment-1",
        "replyListElement": undefined,
        "showConversationLink": false,
      },
      Object {
        "id": "comment-2",
        "replyListElement": undefined,
        "showConversationLink": false,
      },
    ]
  }
  disableShowAll={false}
  hasMore={true}
  indentLevel={1}
  localReply={false}
  onShowAll={[Function]}
  settings={
    Object {
      "reaction": Object {
        "icon": "thumb_up_alt",
        "label": "Respect",
      },
    }
  }
  story={
    Object {
      "id": "story-id",
    }
  }
  viewer={null}
/>
`;
